[package]
name = "glyphmatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
font = { git = "https://github.com/pdf-rs/font" }
pdf_encoding = { git = "https://github.com/pdf-rs/encoding" }
pathfinder_content = { git = "https://github.com/servo/pathfinder/" }
itertools = "*"
serde = { version = "*", features = ["derive"] }
postcard = { version = "1.0", features = ["alloc"] }
istring = { git = "https://github.com/s3bk/istring", features = ["serialize"] }
